# evil-cat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: assault_cube_external_build.yml  build.yml  csgo_external_build.yml
lib/Microsoft DirectX SDK/Include/: d3d9types.h
lib/glm/: manual.md
lib/imgui/: imgui.cpp  imgui.h  imgui.rar  imgui_demo.cpp  imgui_tables.cpp
src/: log.h  magic_enum.h  module.cpp  module.h  settings.cpp  settings.h  singleton.h  smart_handle.h  type.h
src/cache/: cache.cpp  cache.h  cache_body.h  game_cache.h  item_cache.h  player_cache.h  registry.cpp  registry.h
src/controller/: controller.cpp  controller.h
src/driver_loader/: driver_loader_interface.h  simple_driver_loader.cpp  simple_driver_loader.h
src/entity/: entity_manager.cpp  entity_manager.h  player.cpp  player.h
src/entity/offset/: offset.h  player.h
src/entry/: entry.cpp  entry.h  entry_external.cpp  entry_internal.cpp
src/game/: bone.h  entity_container.h  game_helper.h  game_interface.h  item_interface.h  menu_interface.h  player_interface.h  services_chooser_interface.h  weapon.h
src/game/assault_cube/: config.cmake  game.cpp  game.h  game_ptr.h  init.cpp  init.h  menu.cpp  menu.h  module_config.h  offset.h  player.cpp  player.h  service_config.h  services_chooser.cpp  services_chooser.h
src/game/assault_cube/interface/: player_armor_interface.h  player_health_interface.h
src/game/assault_cube/offset/: global_offset.h  offset.h  offset_helper.h  player.h
src/game/assault_cube/service/health_locker/: health_locker.cpp  health_locker.h
src/game/assault_cube/service/name_list/: name_list.cpp  name_list.h
src/game/csgo/: class_id.h  config.cmake  game.cpp  game.h  item.cpp  item.h  module_config.h  offset.h  player.cpp  player.h  service_config.h
src/game/interface/: game_interface.h  init_config.h  menu_interface.h  player_basic_interface.h  player_bone_interface.h  player_interface.h  services_chooser_interface.h
src/game/pubg/: config.cmake  decrypt.cpp  decrypt.h  game.cpp  game.h  helper.cpp  helper.h  item.cpp  item.h  module_config.h  name_pool.cpp  name_pool.h  offset.h  player.cpp  player.h  service_config.h  structure.h
src/manager/: manager.cpp  manager.h
src/mem/: buffer_pool.cpp  buffer_pool.h  memory_accessor.h  process_memory.cpp  process_memory.h  process_memory_accessor.h  process_memory_external.cpp  process_memory_external.h  process_memory_interface.h  process_memory_internal.cpp  process_memory_internal.h
src/offset/: dynamic_define.h  offset.h
src/proc/: process_driver_util.cpp  process_driver_util.h  process_external.cpp  process_external.h  process_helper.cpp  process_helper.h  process_info.cpp  process_info.h  process_info_external.cpp  process_info_external.h  process_info_interface.h  process_info_internal.cpp  process_info_internal.h  process_interface.h  process_internal.cpp  process_internal.h
src/service/: entry.cpp  entry.h  service_container.h  service_interface.h
src/service/aimbot/: aimbot.cpp  aimbot.h  aimbot_helper.cpp  aimbot_helper.h  aimbot_strategy.cpp  aimbot_strategy.h
src/service/esp/: esp.cpp  esp.h
src/service/health_locker/: health_locker.cpp  health_locker.h
src/service/item_esp/: item_esp.cpp  item_esp.h
src/service/name_list/: name_list.cpp  name_list.h
src/service/radar/: radar.cpp  radar.h
src/service/world_to_screen/: game_matrix_world_to_screen.cpp  game_matrix_world_to_screen.h  self_matrix_world_to_screen.cpp  self_matrix_world_to_screen.h  world_to_screen.cpp  world_to_screen.h
src/view/: menu.cpp  menu.h  view.cpp  view.h  view_interface.h
src/view/imgui_d3d9_external/: Functions.h  Overlay.h  view.cpp  view.h
src/view/imgui_d3d9_external_official/: view.cpp  view.h
src/view/imgui_d3d9_overlay/: view.cpp  view.h
src/view/imgui_dwm/: draw.cpp  draw.h  packet.h  view.cpp  view.h
src/world_to_screen/: world_to_screen.cpp  world_to_screen.h
